--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,11 @@ html {
 body {
   margin: 0; }
 
+
+h1 {
+  font-style: "Segoe UI";
+}
+
 article,
 aside,
 details,
@@ -168,6 +173,8 @@ fieldset {
 legend {
   border: 0;
   padding: 0; }
+
+
 
 textarea {
   overflow: auto; }
@@ -2149,3 +2156,30 @@ Note: The best way to structure the use of media queries is to create the querie
 /* Larger than tablet */
 /* Larger than desktop */
 /* Larger than Desktop HD */
+
+
+.container {
+  width: 50%;
+  margin: auto;
+}
+
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+.text-dark {
+  color: #333;
+}
+
+
+.text-white {
+  color: #fff;
+}
